# moncargo-ml

./: README.md  data_for_machine_learning_2023-11-05T01_13_45.27414546Z.csv  main.py  prepare.py  prepared.csv  pyproject.toml  result-svm.csv  result.csv
