[tool.poetry]
name = "20231104-231705"
version = "0.1.0"
description = ""
authors = ["Kay Gosho <ketsume0211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
